Remove enhanced switch